--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
 
   <link rel="stylesheet" href="style.css">
-  <link id="scheme-link" rel="stylesheet" href="schemes/atelier-dune.css">
+  <link id="scheme-link" rel="stylesheet" href="schemes/android-white.css">
 
   <link rel="stylesheet" href="vendor/katex/katex.min.css">
   <script src="vendor/katex/katex.min.js"></script>
